# Doc-Lora-Finetune

./: .gitignore  .pre-commit-config.yaml  README.md  check_grad.py  fix.md  install.sh  pyproject.toml  run_eval.py  setup.py  test_personal_assistant.py  test_results_personal_assistant.json  train.py  watcher.py
chat_templates/Qwen/: Qwen3-4B-Instruct-2507.jinja
chat_templates/google/: gemma-2-2b-it.jinja
chat_templates/mistralai/: Mistral-7B-Instruct-v0.2.jinja
chat_templates/openai/: gpt-oss-20b.jinja
configs/main_exp/: gpt_oss_20b.yaml  gpt_oss_20b_kl.yaml  self_gen_lv1_closed_qa_1_l2l.yaml  self_gen_lv1_closed_qa_1_no_qa_l2l.yaml
configs/niah_exp/: ctx_magic_number_32_256.yaml
data/: build_drop_compact.py  build_pwc_compact.py  build_ropes_compact.py  build_squad_compact.py  download_fineweb_edu.py  generate_ctx_magic_number.py  generate_fw_edu_qa_v2.py  generate_fw_edu_qa_v2_repeat.py  gutenburg_sample.txt  sakana_wiki.txt  self_generate_qa.py
demo/: app.py
eval-results-1500/20260306-023131_c999ea76/: all_results.json  evaluation_results_generation.csv  validation_drop_generated_text.jsonl  validation_drop_results.json  validation_drop_tracked_stats_memory.csv  validation_drop_tracked_stats_timing.csv  validation_ropes_generated_text.jsonl  validation_ropes_results.json  validation_ropes_tracked_stats_memory.csv  validation_ropes_tracked_stats_timing.csv  validation_squad_generated_text.jsonl  validation_squad_results.json  validation_squad_tracked_stats_memory.csv  validation_squad_tracked_stats_timing.csv
examples/: python_api.py
scripts/: eval_pod_setup.sh  setup_h100_pod.sh
scripts/main_exp/: 0-download_data.py  1-train.sh  2-train-chunk.sh  README.md  gen_data.sh  gen_data_gpt_oss.sh  (+3 more)
webui/: SELF_GEN_VIEWER.md  self_gen_viewer.py
(+46 files in other folders)
